<resources>
    <string name="app_name">IntentsProj</string>
    <string name="num1">Number 1</string>
    <string name="num2">Number 2</string>
    <string name="input1">Input 1</string>
    <string name="input2">Input 2</string>
    <string name="btnOk">OK</string>
    <string name="btnAdd">+</string>
    <string name="btnSub">-</string>
    <string name="btnMul">*</string>
    <string name="btnDiv">/</string>
    <string name="txtCalc">0 + 0 = 0</string>
</resources>