<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <TextView
        android:id="@+id/num1"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/num1"
        app:layout_constraintEnd_toStartOf="@+id/num1_in"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/num2"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/num2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/num2_in"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/num1_in"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/num1"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/num2_in"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/num2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_Ok"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/btnOk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />
</androidx.constraintlayout.widget.ConstraintLayout>